<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    
    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
            <TextView
                    android:id="@+id/nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/nama_aplikasi"
                    android:textSize="26sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/tagline_aplikasi"
                    android:textSize="16sp"
                    android:textStyle="italic"/>

        </LinearLayout>
        
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <FrameLayout
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">
                <ImageView
                        android:id="@+id/img_detail_photo"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        tools:src="@tools:sample/avatars"/>
            </FrameLayout>
            
            <TextView
                    android:id="@+id/tv_article_name"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/article_name"
                    android:textSize="32sp"/>
            
            <TextView
                    android:id="@+id/tv_article_harga"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:autoSizeMaxTextSize="18sp"
                    android:text="@string/article_harga"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            
            <TextView
                    android:id="@+id/tv_article_description"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/article_description"/>
            
            <TextView
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/specification"/>
            
            <TableLayout
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:layout_marginTop ="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp">
                   
                <TableRow
                        android:layout_width = "match_parent"
                        android:layout_height = "match_parent"
                        android:layout_marginBottom = "8dp">
                    <TextView
                            android:layout_width = "wrap_content"
                            android:layout_height = "wrap_content"
                            android:layout_marginEnd = "16dp"
                            android:text = "@string/article_mesin"
                            android:textSize = "14sp"/>
                    <TextView
                            android:id="@+id/tv_article_mesin"
                            android:layout_width = "match_parent"
                            android:layout_height = "wrap_content"
                            android:layout_weight = "1"
                            tools:text = "@string/article_mesin"
                            android:textSize = "14sp"/>
               
                </TableRow>
                
                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:textSize="14sp"
                            android:text="@string/article_silinder"/>
                    <TextView
                            android:id="@+id/tv_article_silinder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14sp"
                            tools:text="@string/article_silinder"/>
                </TableRow>
                
                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:textSize="14sp"
                            android:text="@string/article_kompresi"/>
                    <TextView
                            android:id="@+id/tv_article_kompresi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14sp"
                            tools:text="@string/article_kompresi"/>
                </TableRow>
                
                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:textSize="14sp"
                            android:text="@string/article_cc"/>
                    <TextView
                            android:id="@+id/tv_article_cc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14sp"
                            tools:text="@string/article_cc"/>
                </TableRow>
                
                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:textSize="14sp"
                            android:text="@string/article_bahanbakar"/>
                    <TextView
                            android:id="@+id/tv_article_bahanbakar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14sp"
                            tools:text="@string/article_bahanbakar"/>
                </TableRow>
          
            </TableLayout>
            
            <Button
                    android:id="@+id/dialnumber"
                    android:text="@string/contact"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    
    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:menu="@menu/bottom_nav_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>
